# look_at_lines

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
scripts/: install.sh  release.sh
src/: cli.rs  export.rs  file_info.rs  main.rs  theme.rs  ui.rs
tests/: integration_test.rs
