[package]
name = "look_at_lines"
version = "1.0.0"
edition = "2021"
rust-version = "1.74"

description = "Look at Lines is a tool for listing files in a directory – quickly, beautifully, and with style!"
readme = "README.md"
license = "Apache-2.0"
categories = ["command-line-utilities"]


[[bin]]
name = "ll"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.test]
inherits = "dev"
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

# if speed will slow
[profile.release-perf]
inherits = "release"
opt-level = 2
lto = "thin"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
terminal_size = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uzers = "0.12"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
quick-xml = { version = "0.31", features = ["serialize"] }
arboard = { version = "3.3", default-features = false }
unicode-width = "0.2.2"
terminal-colorsaurus = "0.4"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = { level = "forbid", priority = 0 }
